--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,74 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#1A1B22"
-    android:padding="20dp">
+    android:background="@color/blue"
+    android:paddingLeft="@dimen/text_indent"
+    android:paddingRight="@dimen/text_indent" >
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="14dp"
+        android:layout_marginBottom="@dimen/text_indent">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:text="Вопрос:"
-            android:textColor="#ffffff"
-            android:textSize="20sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:text="2/10"
-            android:textColor="#ffffff"
-            android:textSize="20sp" />
+            android:text="@string/app_name"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text_size" />
     </FrameLayout>
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="20dp"
-        android:layout_weight="1"
-        android:scaleType="centerCrop"
-        android:src="@drawable/poster" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginHorizontal="63dp"
-        android:layout_marginTop="33dp"
-        android:gravity="center"
-        android:text="Рейтинг этого фильма больше чем 9?"
-        android:textColor="#ffffff"
-        android:textSize="23sp"
-        android:textStyle="bold" />
-    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="33dp"
-        android:orientation="horizontal">
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="28dp"
+        android:orientation="vertical" >
 
         <Button
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_marginEnd="10dp"
+            android:id="@+id/search"
+            android:layout_width="match_parent"
+            android:layout_height="220dp"
+            android:layout_marginBottom="@dimen/text_indent"
             android:layout_weight="1"
-            android:backgroundTint="#ffffff"
-            android:text="Нет"
-            android:textColor="#1A1B22" />
+            android:backgroundTint="@color/white"
+            android:foreground="?attr/selectableItemBackground"
+            android:text="@string/search"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_size"
+            android:textAllCaps="false"
+            app:icon="@drawable/light_mode"
+            app:iconGravity="textStart"
+            app:iconPadding="1dp"
+            app:iconTint="@color/black"
+            app:cornerRadius="@dimen/margin_start"/>
 
         <Button
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_marginStart="10dp"
+            android:id="@+id/media"
+            android:layout_width="match_parent"
+            android:layout_height="220dp"
+            android:layout_marginBottom="@dimen/text_indent"
             android:layout_weight="1"
-            android:backgroundTint="#ffffff"
-            android:text="Да"
-            android:textColor="#1A1B22" />
+            android:backgroundTint="@color/white"
+            android:foreground="?attr/selectableItemBackground"
+            android:text="@string/media"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_size"
+            android:textAllCaps="false"
+            app:icon="@drawable/media"
+            app:iconGravity="textStart"
+            app:iconPadding="1dp"
+            app:iconTint="@color/black"
+            app:cornerRadius="@dimen/margin_start"/>
+
+        <Button
+            android:id="@+id/settings"
+            android:layout_width="match_parent"
+            android:layout_height="220dp"
+            android:layout_weight="1"
+            android:backgroundTint="@color/white"
+            android:foreground="?attr/selectableItemBackground"
+            android:text="@string/settings"
+            android:textAllCaps="false"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_size"
+            app:icon="@drawable/settings"
+            app:iconGravity="textStart"
+            app:iconPadding="1dp"
+            app:iconTint="@color/black"
+            app:cornerRadius="@dimen/margin_start"/>
+
     </LinearLayout>
+
+
+
 </LinearLayout> 
