--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
             app:cornerRadius="@dimen/margin_start"/>
 
         <Button
-            android:id="@+id/settings"
+            android:id="@+id/settingsButton"
             android:layout_width="match_parent"
             android:layout_height="220dp"
             android:layout_weight="1"
