--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/settings"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/white">
@@ -17,6 +18,7 @@
         <Button
             android:layout_width="@dimen/height_settings"
             android:layout_height="wrap_content"
+            android:id="@+id/arrowBackSettingsButton"
             android:backgroundTint="@color/white"
             android:gravity="start"
             app:icon="@drawable/arrow_back"
