--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,12 +3,40 @@
     <style name="titleStyle" >
         <item name="android:textSize">@dimen/text_size</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textFontWeight">500</item>
     </style>
 
-    <style name="settingsText" >
+    <style name="regularText" >
         <item name="android:textSize">@dimen/text_indent</item>
-        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textFontWeight">400</item>
+    </style>
+
+    <style name="mainActivityButtons" parent="Widget.MaterialComponents.Button">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_marginHorizontal">@dimen/text_indent</item>
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textAppearance">@style/titleStyle</item>
         <item name="android:textColor">@color/black</item>
+        <item name="iconGravity">textStart</item>
+        <item name="iconPadding">1dp</item>
+        <item name="iconTint">@color/black</item>
+        <item name="cornerRadius">@dimen/margin_start</item>
+    </style>
+
+    <style name="settingsStyle" >
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingStart">@dimen/text_indent</item>
+        <item name="android:paddingEnd">12dp</item>
+        <item name="android:paddingVertical">21dp</item>
+        <item name="android:layout_gravity">start</item>
+        <item name="android:drawableTint">#AEAFB4</item>
+        <item name="android:textAppearance">@style/regularText</item>
     </style>
 </resources>
