--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -42,7 +42,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
-        android:src="@android:drawable/ic_menu_close_clear_cancel"
+        android:src="@drawable/cancel_icon"
+        android:layout_marginVertical="10dp"
+        android:layout_marginEnd="14dp"
         android:visibility="gone" />
 
     </FrameLayout>
