--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -35,6 +35,7 @@
         android:maxLines="1"
         android:inputType="text"
         android:textAppearance="@style/regularText"
+        android:textColor="@color/black"
         style="@style/searchStyle" />
 
     <ImageView
@@ -44,8 +45,9 @@
         android:layout_gravity="end"
         android:src="@drawable/cancel_icon"
         android:layout_marginVertical="10dp"
-        android:layout_marginEnd="14dp"
-        android:visibility="gone" />
+        android:layout_marginEnd="12dp"
+        android:visibility="gone"
+        style="@style/searchStyle"/>
 
     </FrameLayout>
 
