--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -12,7 +12,7 @@
         android:id="@+id/searchArrowBack"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"
+        android:layout_margin="@dimen/margin_4dp"
         app:navigationIcon="@drawable/arrow_back"
         app:title="@string/search"
         app:titleTextAppearance="@style/titleStyle"
@@ -21,7 +21,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingVertical="8dp"
+        android:paddingVertical="@dimen/margin_8dp"
         android:paddingHorizontal="@dimen/text_indent">
 
     <EditText
@@ -29,7 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableStart="@drawable/search_14x14"
-        android:drawablePadding="8dp"
+        android:drawablePadding="@dimen/margin_8dp"
         android:hint="@string/search"
         android:background="@drawable/search_background"
         android:maxLines="1"
@@ -44,11 +44,17 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end"
         android:src="@drawable/cancel_icon"
-        android:layout_marginVertical="10dp"
-        android:layout_marginEnd="12dp"
+        android:layout_marginVertical="@dimen/margin_10dp"
+        android:layout_marginEnd="@dimen/margin_12dp"
         android:visibility="gone"
         style="@style/searchStyle"/>
 
     </FrameLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/trackRecycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
 </LinearLayout>
