--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/toolBar"
-        android:layout_margin="4dp"
+        android:layout_margin="@dimen/margin_4dp"
         app:navigationIcon="@drawable/arrow_back"
         app:title="@string/settings"
         app:titleTextAppearance="@style/titleStyle"
@@ -21,8 +21,8 @@
         android:id="@+id/nightThemeSwitch"
         style="@style/settingsStyle"
         android:layout_gravity="center_vertical"
-        android:layout_marginTop="24dp"
-        android:paddingEnd="6dp"
+        android:layout_marginTop="@dimen/margin_24dp"
+        android:paddingEnd="@dimen/margin_6dp"
         android:text="@string/dark_theme" />
 
     <com.google.android.material.textview.MaterialTextView
