--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -9,12 +9,19 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
     </style>
 
+    <style name="subtitleGrayText" >
+        <item name="android:textSize">11sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="fontFamily">@font/ys_display_regular</item>
+        <item name="android:textFontWeight">400</item>
+    </style>
+
     <style name="settingsStyle" >
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingStart">@dimen/text_indent</item>
-        <item name="android:paddingEnd">12dp</item>
-        <item name="android:paddingVertical">21dp</item>
+        <item name="android:paddingEnd">@dimen/margin_12dp</item>
+        <item name="android:paddingVertical">@dimen/margin_21dp</item>
         <item name="android:textSize">@dimen/text_indent</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:layout_gravity">start</item>
@@ -32,6 +39,10 @@
         <item name="android:textColorHint">@color/black</item>
         <item name="android:drawableTint">@color/black</item>
         <item name="android:tint">@color/black</item>
+    </style>
+
+    <style name="grayToWhiteIcon" >
+        <item name="android:tint">@color/white</item>
     </style>
 
 </resources>
