--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,6 +19,10 @@
         <item name="android:drawableTint">@color/gray</item>
         <item name="android:tint">@color/gray</item>
     </style>
+
+    <style name="grayToWhiteIcon" >
+        <item name="android:tint">@color/gray</item>
+    </style>
     <style name="Theme.PlaylistMaker" parent="Base.Theme.PlaylistMaker" />
 </resources>
 
