Work on bugs Цвет бэкграунда в разметке почему-то отображает стандартную тему, но при запуске эмулятора все гуд!

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,5 +21,6 @@
     <dimen name="margin_22dp">22dp</dimen>
     <dimen name="margin_24dp">24dp</dimen>
     <dimen name="margin_28dp">28dp</dimen>
+    <dimen name="track_image_corner_radius">2dp</dimen>
 
 </resources>
