--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:id="@+id/main"
+    android:orientation="vertical"
+    android:background="?attr/colorPrimaryVariant" >
 
-    <TextView
-        android:layout_width="wrap_content"
+    <com.google.android.material.appbar.MaterialToolbar
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_margin="@dimen/margin_4dp"
+        app:title="@string/app_name"
+        app:titleTextAppearance="@style/titleStyle"
+        app:titleTextColor="@color/white" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        style="@style/mainActivityButtons"
+        android:id="@+id/search"
+        android:layout_marginTop="@dimen/margin_24dp"
+        android:layout_marginHorizontal="@dimen/margin_22dp"
+        android:text="@string/search"
+        app:icon="@drawable/light_mode" />
+
+    <Button
+        style="@style/mainActivityButtons"
+        android:id="@+id/media"
+        android:layout_margin="@dimen/margin_22dp"
+        android:text="@string/media"
+        app:icon="@drawable/media" />
+
+    <Button
+        style="@style/mainActivityButtons"
+        android:id="@+id/settingsButton"
+        android:layout_marginHorizontal="@dimen/margin_22dp"
+        android:layout_marginBottom="@dimen/margin_28dp"
+        android:text="@string/settings"
+        app:icon="@drawable/settings" />
+
+</LinearLayout> 
