--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,48 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.PlaylistMaker" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimaryVariant">@color/black</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
     </style>
+
+    <style name="subtitleGrayText" >
+        <item name="android:textSize">11sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="fontFamily">@font/ys_display_regular</item>
+        <item name="android:textFontWeight">400</item>
+    </style>
+
+    <style name="settingsStyle" >
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingStart">@dimen/text_indent</item>
+        <item name="android:paddingEnd">@dimen/margin_12dp</item>
+        <item name="android:paddingVertical">@dimen/margin_21dp</item>
+        <item name="android:textSize">@dimen/text_indent</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:layout_gravity">start</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="android:drawableTint">@color/white</item>
+    </style>
+
+    <style name="iconColorBlack" >
+        <item name="navigationIconTint">@color/white</item>
+        <item name="android:drawableTint">#1A1B22</item>
+    </style>
+
+    <style name="searchStyle" >
+        <item name="android:textColorHint">@color/black</item>
+        <item name="android:drawableTint">@color/black</item>
+        <item name="android:tint">@color/black</item>
+    </style>
+
+    <style name="grayToWhiteIcon" >
+        <item name="android:tint">@color/white</item>
+    </style>
+
 </resources>
