Work on bugs исправил замечания

--- a/app/src/main/res/layout/track_view.xml
+++ b/app/src/main/res/layout/track_view.xml
@@ -39,8 +39,11 @@
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/artistName"
                 style="@style/subtitleGrayText"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:maxLines="1"
                 tools:text="test"/>
 
             <ImageView
@@ -54,6 +57,8 @@
                 style="@style/subtitleGrayText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:gravity="start"
                 tools:text="test"/>
 
