Sprint №12 Реализация свитчера темы, списка истории треков.

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -18,7 +18,7 @@
         style="@style/iconColorBlack"/>
 
     <com.google.android.material.switchmaterial.SwitchMaterial
-        android:id="@+id/nightThemeSwitch"
+        android:id="@+id/nightThemeSwitcher"
         style="@style/settingsStyle"
         android:layout_gravity="center_vertical"
         android:layout_marginTop="@dimen/margin_24dp"
