--- a/app/src/main/res/layout/audio_player_view.xml
+++ b/app/src/main/res/layout/audio_player_view.xml
@@ -118,7 +118,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_4dp"
-            android:text="0:30"
+            android:text="@string/null_track_duration"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="@id/rightGuideLine"
             app:layout_constraintStart_toStartOf="@id/leftGuideLine"
