--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -131,6 +131,15 @@
 
     </LinearLayout>
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/margin_140dp"
+        android:indeterminateTint="@color/blue"
+        android:visibility="gone" />
+
     <ScrollView
         android:id="@+id/searchHistoryView"
         android:layout_width="match_parent"
