Sprint №15 Work on bugs

--- a/app/src/main/res/layout/audio_player_view.xml
+++ b/app/src/main/res/layout/audio_player_view.xml
@@ -271,6 +271,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_17dp"
+            android:layout_marginBottom="@dimen/margin_20dp"
             android:gravity="start"
             android:text="@string/region"
             android:textColor="@color/gray"
@@ -278,7 +279,8 @@
             app:layout_constraintEnd_toStartOf="@+id/country"
             app:layout_constraintHorizontal_chainStyle="spread_inside"
             app:layout_constraintStart_toStartOf="@id/leftTextGuideline"
-            app:layout_constraintTop_toBottomOf="@id/primaryGenreNameText" />
+            app:layout_constraintTop_toBottomOf="@id/primaryGenreNameText"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/country"
