--- a/ui/src/main/res/values/styles.xml
+++ b/ui/src/main/res/values/styles.xml
@@ -4,6 +4,7 @@
         <item name="android:textSize">@dimen/text_size</item>
         <item name="android:textColor">?attr/colorOnPrimary</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textAllCaps">false</item>
         <item name="android:textFontWeight">500</item>
     </style>
 
@@ -26,6 +27,21 @@
         <item name="android:textColor">?attr/colorOnPrimary</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textFontWeight">400</item>
+    </style>
+
+    <style name="tabLayoutMediaText" >
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textFontWeight">500</item>
+    </style>
+
+    <style name="tabIndicatorStyle" >
+        <item name="android:layout_width">@dimen/margin_148dp</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="tabIndicatorColor">?attr/colorOnPrimary</item>
+        <item name="tabIndicatorFullWidth">false</item>
     </style>
 
     <style name="mainActivityButtons" parent="Widget.MaterialComponents.Button.UnelevatedButton">
@@ -57,9 +73,9 @@
     <style name="refreshButtonStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton" >
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:paddingVertical">@dimen/margin_6dp</item>
-        <item name="android:paddingRight">@dimen/margin_6dp</item>
-        <item name="android:paddingLeft">@dimen/margin_8dp</item>
+        <item name="android:paddingVertical">@dimen/margin_10dp</item>
+        <item name="android:paddingRight">@dimen/margin_14dp</item>
+        <item name="android:paddingLeft">@dimen/margin_16dp</item>
         <item name="android:backgroundTint">?attr/colorOnPrimary</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textAppearance">@style/titleStyle</item>
