--- a/ui/src/main/res/layout/favorite_tracks_fragment.xml
+++ b/ui/src/main/res/layout/favorite_tracks_fragment.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/favoriteTracksFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="?attr/colorPrimary" >
+    android:background="?attr/colorPrimary"
+    tools:context=".presentation.ui.media.FavoriteTracksFragment">
 
     <LinearLayout
         android:id="@+id/placeholderWithoutMedia"
