--- a/ui/src/main/res/layout/fragment_media.xml
+++ b/ui/src/main/res/layout/fragment_media.xml
@@ -7,14 +7,13 @@
     android:id="@+id/mediaActivity"
     android:orientation="vertical"
     android:background="?attr/colorPrimary"
-    tools:context=".presentation.ui.media.MediaActivity">
+    tools:context=".presentation.ui.media.MediaFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/arrowBack"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_4dp"
-        app:navigationIcon="@drawable/arrow_back"
         app:title="@string/media"
         app:titleTextAppearance="@style/titleStyle"
         style="@style/iconColorBlack"/>
