--- a/ui/src/main/res/layout/fragment_settings.xml
+++ b/ui/src/main/res/layout/fragment_settings.xml
@@ -2,17 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/settings"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="?attr/colorPrimary">
+    android:background="?attr/colorPrimary"
+    tools:context=".presentation.ui.settings.SettingsFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/toolBar"
         android:layout_margin="@dimen/margin_4dp"
-        app:navigationIcon="@drawable/arrow_back"
         app:title="@string/settings"
         app:titleTextAppearance="@style/titleStyle"
         style="@style/iconColorBlack"/>
