--- a/ui/src/main/res/values/styles.xml
+++ b/ui/src/main/res/values/styles.xml
@@ -15,6 +15,14 @@
         <item name="android:textFontWeight">400</item>
     </style>
 
+    <style name="regularTextBottomNav" >
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:letterSpacing">0.04</item>
+    </style>
+
     <style name="subtitleGrayText" >
         <item name="android:textSize">11sp</item>
         <item name="android:textColor">@color/gray</item>
@@ -82,6 +90,12 @@
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">?attr/colorPrimary</item>
         <item name="cornerRadius">54dp</item>
+    </style>
+
+    <style name="CustomBottomNavView" >
+        <item name="android:background">@drawable/bottom_nav_background</item>
+        <item name="itemIconTint">@drawable/bottom_nav_selector</item>
+        <item name="itemTextColor">@drawable/bottom_nav_selector</item>
     </style>
 
 </resources>
